k8s/base/deployment-image-analyser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-analyser
  labels:
    app.kubernetes.io/name: image-analyser
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: image-analyser
  template:
    metadata:
      labels:
        app.kubernetes.io/name: image-analyser
    spec:
      containers:
        - name: image-analyser
          image: zbeedatm/property-triage-image_analyser:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 40
            periodSeconds: 20
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "4Gi"
              cpu: "4000m"
