k8s/base/deployment-webui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
  labels:
    app.kubernetes.io/name: webui
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: webui
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webui
    spec:
      containers:
        - name: webui
          image: zbeedatm/property-triage-webui:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 7860
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "2Gi"
              cpu: "2000m"
