k8s/base/service-image-analyser.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-analyser
  labels:
    app.kubernetes.io/name: image-analyser
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: image-analyser
  ports:
    - name: http
      port: 8000
      targetPort: http
