k8s/base/service-webui.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui
  labels:
    app.kubernetes.io/name: webui
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: webui
  ports:
    - name: http
      port: 7860
      targetPort: http
